--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.1",
+    "framer-motion": "^10.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
