--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/commands": "^6.3.2",
+    "@codemirror/state": "^6.3.3",
+    "@codemirror/view": "^6.22.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.1",
+    "codemirror": "^6.0.1",
     "framer-motion": "^10.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
