--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@codemirror/view": "^6.22.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^2.0.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "codemirror": "^6.0.1",
     "framer-motion": "^10.6.8",
     "react": "^18.2.0",
@@ -33,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.4",
     "postcss": "^8.4.31",
     "radix-themes-tw": "^0.0.8",
+    "tailwind-merge": "^2.1.0",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
